<resources>
    <string name="app_name">s205444_Lykkehjulet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_new_game">Start New Game</string>
    <string name="game_title">Wheel of Fortune</string>
    <string name="play">Play</string>
    <string name="spin_wheel">Spin</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost</string>
    <string name="press_start_new_game_to_play">Press start new game to play</string>
    <string name="used_letters">Used Letters:</string>
    <string name="you_spun_this">You spun: </string>
    <string name="number_of_points">Points: </string>
    <string name="lives">Lives:</string>
    <string name="Word_to_guess">Word to guess:</string>
    <string name="Category1">Europe</string>
    <string name="Category2">Oceania</string>
    <string name="Category3">North America</string>
    <string name="Category4">South America</string>
    <string name="Category5">Africa</string>
    <string name="Category6">Asia</string>
    <string name="categories_in_this_game">Categories in this game:</string>
    <string name="play_another_game">Play another game</string>
    <string name="Country">Category: Country</string>
    <string name="choose_letter">Choose a letter</string>
<string name="Hundred" >100 \n
 >>> Choose a letter, then spin</string>
    <string name="Thousand" >1000 \n
 >>> Choose a letter, then spin</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

</resources>