<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GameFragment">



    <TextView
        android:id="@+id/livesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        app:layout_constraintBottom_toTopOf="@+id/spinWheelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lettersUsedTextView"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_points"
        app:layout_constraintBottom_toTopOf="@+id/spinWheelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/livesTextView"
        app:layout_constraintTop_toBottomOf="@+id/lettersUsedTextView" />

    <TextView
        android:id="@+id/spinResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/you_spun_this"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinWheelButton" />

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:text="@string/press_start_new_game_to_play"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        tools:text="_ _ ABCD_ _ _ _ _ _ _" />

    <TextView
        android:id="@+id/lettersUsedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/wordTextView"
        android:text="@string/used_letters"
        tools:text="Used Letters: A, B, C, D, E, F, G" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lettersUsedTextView"
        app:layout_constraintVertical_bias="0.29000002"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newGameButton">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:constraint_referenced_ids="a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.helper.widget.Flow>

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/a"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/b"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/d"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/e"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/f"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/g"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/h"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/i"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/j"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/k"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/l"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/m"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="170dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/n"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/p"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="173dp"
            tools:layout_editor_absoluteY="170dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/q"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/r"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="249dp"
            tools:layout_editor_absoluteY="170dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/s"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/t"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="322dp"
            tools:layout_editor_absoluteY="170dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/u"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/v"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="49dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/w"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="118dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="24sp"

            tools:layout_editor_absoluteX="192dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/y"
            android:textColor="@color/white"
            android:textSize="24sp"

            tools:layout_editor_absoluteX="260dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/design_default_color_primary"
            android:paddingHorizontal="10dp"
            android:text="@string/z"
            android:textColor="@color/white"
            android:textSize="24sp"

            tools:layout_editor_absoluteX="328dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/spinWheelButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin_wheel"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lettersUsedTextView"
        app:rippleColor="#9C27B0" />

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/wordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>